logs/drx_main_service.log-2025-07-25
# Log rotated on Thu 24 Jul 00:00:11 EDT 2025
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
    ^^^^
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
    ^^^^
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
    ^^^^
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
    ^^^^
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
    ^^^^
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
    ^^^^
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
    ^^^^
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
    ^^^^
SyntaxError: expected 'except' or 'finally' block
  File "/home/drx/DRX/drx_main.py", line 1279
    elif repeating:
    ^^^^
SyntaxError: expected 'except' or 'finally' block
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
No terminal detected. Running in headless mode.
No interactive terminal detected. Skipping command prompt loop.
